- 
    Bug 
- 
    Resolution: Fixed
- 
    P2: Important 
- 
    5.15.11, 6.2.6, 6.4.1
- 
        
- 
        095604c9a (dev), 983b3d10d (tqtc/lts-6.2), cbd9c0ed5 (6.4), 680a48be9 (tqtc/lts-5.15), fe386e808 (6.5)
Voice Control Accessibility feature works fine in iOS 15 and earlier, but sometimes breaks in iOS 16.
Initial Setup
Configure your iOS device to use Voice Control:
- Go to Settings
- Tap on Accessibility
- Tap on Voice Control
- Turn on Voice control (A file download may be required at this moment)
- Select Item Number from Voice Control -> Overlay
- Go back to the Home Screen
At the top-left corner of your phone, in the status bar, you will see a blue microphone icon indicating that Voice Control is actively listening to your commands. If the microphone icon is grayed out, say "Wake up" to activate Voice Control.
Steps to reproduce
- Deploy and run https://doc.qt.io/qt-5/qtquick-quick-accessibility-example.html
- Notice that numbers appear, overlaid on tappable UI elements. It is now possible select/click/tap a UI element by saying its number out loud.
- Add this line to shared.h: view.setTitle("accessible");
- Rebuild and deploy app
- Notice that the number overlay no longer appears, and it's no longer possible to use the Voice control feature
| For Gerrit Dashboard: QTBUG-108848 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 448955,2 | iOS a11y: Ensure parent elements are stacked below their children | dev | qt/qtbase | Status: MERGED | +2 | 0 | 
| 449098,2 | iOS a11y: Ensure parent elements are stacked below their children | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 | 
| 449099,2 | iOS a11y: Ensure parent elements are stacked below their children | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 | 
| 449107,2 | iOS a11y: Ensure parent elements are stacked below their children | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 | 
| 449108,2 | iOS a11y: Ensure parent elements are stacked below their children | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 | 
| 483517,1 | iOS a11y: Ensure parent elements are stacked below their children | tqtc/lts-5.15-vxworks | qt/tqtc-qtbase | Status: ABANDONED | -2 | 0 | 

