src/plugins/platforms/ios/quiview_accessibility.mm
@@ -59,9 +59,11 @@
     if (!iface || iface->state().invisible)
         return;
 
-    [self createAccessibleElement: iface];
     for (int i = 0; i < iface->childCount(); ++i)
         [self createAccessibleContainer: iface->child(i)];
+
+    // The container element must go last, so that it underlays all its children
+    [self createAccessibleElement:iface];
 }
 
 - (void)initAccessibility
